--- a/AngularApp/projects/diagnostic-data/src/lib/components/summary-cards/summary-cards.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/summary-cards/summary-cards.component.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
-    //width can be percent to responsive 
+    //width can be percent to responsive
     max-width: 250px;
     // height: 90px;
     flex: 1;
@@ -17,6 +17,25 @@
     box-shadow: rgba(50,50,50,0.5) 0px 2px 2px;
 }
 
+.card-container :hover {
+    background-color: var(--tileHomepageHoverBackground);
+}
+
+.fa-exclamation-circle {
+    color: #ff0000;
+}
+
+.fa-exclamation-triangle {
+    color: #ff9104;
+}
+
+.fa-check-circle {
+    color: #3da907;
+}
+
+.fa-info-circle {
+    color: #3a9bc7;
+}
 .card-title{
     font-size: 13px;
     line-height: 15px;
