--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/collapsible-menu-item/collapsible-menu-item.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/collapsible-menu-item/collapsible-menu-item.component.scss
@@ -10,7 +10,7 @@
 
 :host-context(.light-theme) .menu-item:hover,
 :host-context(.light-theme) .menu-item.selected {
-    background-color: rgba(0,137,250,.1);
+    background-color: var(--bodyBackground)
 }
 
 .expand-icon {
@@ -22,20 +22,20 @@
 /* DARK THEME */
 
 :host-context(.dark-theme) .menu-item {
-    color:#e2e2e2;
+    color:var(--bodyText);
     padding: 5px 5px 5px 30px;
     font-size: 14px;
 }
 
 :host-context(.dark-theme) .menu-item:hover,
 :host-context(.dark-theme) .menu-item.selected {
-    color:#fff;
-    background-color: #222222;
+    color:var(--bodyText);
+    background-color: var(--bodyBackground)
 }
 
 /* LIGHT THEME */
 :host-context(.light-theme) .menu-item {
-    color:#1d1d1d;
+    color:var(--bodyText);
     font-size: 12px;
     padding: 10px 5px 9px 35px;
 }
@@ -43,7 +43,7 @@
 :host-context(.light-theme) .menu-item:hover,
 :host-context(.light-theme) .menu-item.selected {
     //background-color: rgba(0,137,250,.1);
-    background-color: #edebe9;
+    background-color: var(--bodyBackground)
 }
 
 .menu-label > b {
@@ -72,12 +72,12 @@
 .menu-item:hover .tooltiptext {
     display: block;
     opacity: 1;
-    background: white!important;
+    background:  var(--bodyBackground)!important;
     width: 85%;
     z-index: 999;
     margin-top: 6px;
     position: absolute;
-    border: 1px solid black;
+    border: 1px solid var(--inputBorder);
     padding: 3px;
     font-size: 12px;
     bottom: -60%;
