--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.scss
@@ -8,9 +8,18 @@
     width: 100%;
     position: absolute;
     z-index: 300;
-    background: #ffffff;
+    background: var(--bodyBackground);
     border-radius: 2px;
     box-shadow: 0 8px 16px rgba(0,0,0,.16);
+    border: 1px solid var(--inputBorder)
+}
+
+.feature-title{
+    color: var(--bodyText);
+}
+
+.feature-category {
+    color: var(----labelText);
 }
 
 .search-box {
@@ -33,8 +42,8 @@
 
 .result-count {
     font-size: 15px;
-    text-align: center; 
-    color: #676767;
+    text-align: center;
+    color: var(--bodyText);
 }
 
 .feature-icon {
