Update banner color

--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data/tab-data.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data/tab-data.component.html
@@ -1,2 +1,3 @@
+<applens-preview-banner></applens-preview-banner>
 <comm-alert *ngIf="!analysisMode"></comm-alert>
 <detector-container [analysisMode]="analysisMode" [detector]="detector"></detector-container>
