Add high contrast theming

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.scss
@@ -15,6 +15,7 @@
   .body-content {
     display: flex!important;
     color: var(--bodyText);
+    border:bold;
   }
 
   //display side nav for 100% zooming
