--- a/AngularApp/projects/app-service-diagnostics/src/styles/base/_typography.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/base/_typography.scss
@@ -9,7 +9,7 @@ body #app-root[theme=dark]{
 }
 
 #app-root[theme=dark] a{
-    color: $primary-color-dark;
+    color: var(--link)
 }
 
 h1, h2, h3, h4, h5{
@@ -58,7 +58,7 @@ h5{
 
 a, .link{
     cursor: pointer;
-    color: $primary-color;
+    color: var(--link);
 
     &:hover{
         color: $primary-color-hover;
@@ -99,7 +99,7 @@ label, .text-label {
 
 #app-root[theme=dark]{
     h1{
-        color: $default-text-color-dark;
+        color: var(--bodyText);
     }
 
     h2,h3,h4{
@@ -112,7 +112,7 @@ label, .text-label {
 
     .link{
         color: $primary-color-dark;
-    
+
         &:hover{
             color: $primary-color-hover-dark;
         }
