Fix card container and load view for new detector view

--- a/AngularApp/projects/diagnostic-data/src/lib/components/summary-cards/summary-cards.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/summary-cards/summary-cards.component.scss
@@ -39,7 +39,7 @@
 .card-title{
     font-size: 13px;
     line-height: 15px;
-    color: #646464;
+    color: var(--cardViewTitle);
     margin: 3px;
 }
 .card-description {
