--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.scss
@@ -85,10 +85,12 @@ $panel-padding-right: 20px;
 }
 
 .submitted-panel-text {
+    font-weight: 600;
     display: flex;
     justify-content: space-between;
     margin: 5px 0px;
     font-size: 14px;
+    margin-bottom: 16px;
 }
 
 .submitted-panel-icon {
